--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'B'
 - !lcsh 'Aristotle, 384 BC-322 BC'
+- GITenberg
 title: Aristotle
 url: http://www.gutenberg.org/ebooks/45851
